# NTU-TinyML-Lab1

./: LCD_DISCO_F746NG.cpp  LCD_DISCO_F746NG.h  README  README.md  hello_world_test.cc  modify.py  output_handler.cc  train_hello_world_model.ipynb
BSP/: CMakeLists.txt
BSP/Drivers/: CMakeLists.txt
BSP/Drivers/BSP/: CMakeLists.txt
BSP/Drivers/BSP/Components/: CMakeLists.txt
BSP/Drivers/BSP/STM32H747I-Discovery/: stm32h747i_discovery_lcd.c  stm32h747i_discovery_lcd.h
BSP/Utilities/: CMakeLists.txt
